--- a/OnlineClothesStore/Views/Clothes/Create.cshtml
+++ b/OnlineClothesStore/Views/Clothes/Create.cshtml
@@ -1,95 +1,101 @@
 ﻿@model OnlineClothesStore.Models.Cloth
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Register Product";
 }
 
-<h2>Create</h2>
+<h4 class="text-center text-success my-4">Register Product</h4>
+
+<div class="signin-form mb-5">
+    <div class="cotainer">
+        <div class="row justify-content-center">
+            @*Product card*@
+            <div class="col-md-8">
+                <div class="card border-success">
+                    <div class="card-header text-white bg-success">Register My Product</div>
+                    <div class="card-body">
+                        @using (Html.BeginForm("Create", "Clothes", FormMethod.Post))
+                        {
+                            @Html.AntiForgeryToken()
+                            @Html.HiddenFor(model => model.CId)
+
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Brand, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Brand, new { htmlAttributes = new { @class = "form-control" } })
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Brand, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6 btn-group">
+                                    @Html.DropDownList("Category", new List<SelectListItem>
+                                    {
+                                          new SelectListItem { Text = "T-Shirt", Value = "T-Shirt"},
+                                          new SelectListItem { Text = "Hoodie", Value = "Hoodie"},
+                                          new SelectListItem { Text = "Trouser", Value = "Trouser"},
+                                          new SelectListItem { Text = "Jacket", Value = "Jacket"}
+                                    }, "Select Category", new { @class = "btn btn-secondary dropdown-toggle btn-check" })
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Size, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Size, new { htmlAttributes = new { @class = "form-control" } })
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Size, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Color, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Color, new { htmlAttributes = new { @class = "form-control" } })
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Color, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6 btn-group">
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Gender, "Male", new { @class = "btn-check", @autocomplete = "off" })Male</label>
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Gender, "Female", new { @class = "btn-check" })Female</label>
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Condition, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6 btn-group">
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Condition, "New", new { @class = "btn-check", @autocomplete = "off" })Male</label>
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Condition, "Used", new { @class = "btn-check" })Female</label>
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Condition, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Location, new { htmlAttributes = new { @class = "form-control" } })
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Location, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
 
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Cloth</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Condition, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Condition, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Condition, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Color, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Color, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Color, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Size, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Size, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Size, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brand, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brand, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brand, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                            <div class="col-md-6 offset-md-4">
+                                <button type="submit" class="btn btn-success mr-3">Register My Product</button>
+                            </div>
+                        }
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
+
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
