--- a/OnlineClothesStore/Views/Clothes/Create.cshtml
+++ b/OnlineClothesStore/Views/Clothes/Create.cshtml
@@ -17,7 +17,6 @@
                         @using (Html.BeginForm("Create", "Clothes", FormMethod.Post))
                         {
                             @Html.AntiForgeryToken()
-                            @Html.HiddenFor(model => model.CId)
 
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.Brand, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
@@ -64,8 +63,8 @@
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.Condition, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
                                 <div class="col-md-6 btn-group">
-                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Condition, "New", new { @class = "btn-check", @autocomplete = "off" })Male</label>
-                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Condition, "Used", new { @class = "btn-check" })Female</label>
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Condition, "New", new { @class = "btn-check", @autocomplete = "off" })New</label>
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Condition, "Used", new { @class = "btn-check" })Used</label>
                                 </div>
                                 @Html.ValidationMessageFor(model => model.Condition, "", new { @class = "col-md-12 text-danger text-center" })
                             </div>
@@ -82,6 +81,13 @@
                                     @Html.EditorFor(model => Model.Location, new { htmlAttributes = new { @class = "form-control" } })
                                 </div>
                                 @Html.ValidationMessageFor(model => model.Location, "", new { @class = "col-md-12 text-danger text-center" })
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6 custom-file">
+                                    @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
+                                </div>
+                                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "col-md-12 text-danger text-center" })
                             </div>
 
 
