--- a/OnlineClothesStore/Views/Clothes/Index.cshtml
+++ b/OnlineClothesStore/Views/Clothes/Index.cshtml
@@ -4,72 +4,44 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Gender)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Category)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Condition)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Color)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Size)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brand)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Location)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Gender)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Category)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Condition)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Color)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Size)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Brand)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CId })
-        </td>
-    </tr>
-}
-
-</table>
+<div class="container-fluid mt-2 mb-5">
+    <div class="d-flex justify-content-between p-3 bg-white mb-3 align-items-center">
+        <span class="font-weight-bold text-uppercase">Clothing</span>
+        <div> <i class="fa-solid fa-list fa-xl"></i> <i class="fa-solid fa-table-cells fa-xl"></i> </div>
+    </div>
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-4 mb-5">
+                <div class="card">
+                    <img src="~/Images/@Html.DisplayFor(modelItem => item.Image)" class="card-img-top" />
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                            <span class="font-weight-bold">@Html.DisplayFor(modelItem => item.Brand) 
+                                @Html.DisplayFor(modelItem => item.Color) 
+                                @Html.DisplayFor(modelItem => item.Category)
+                            </span>
+                            <span class="font-weight-bold">$@Html.DisplayFor(modelItem => item.Price)</span>
+                        </div>
+                        <p class="card-text mb-1 mt-1">This is @Html.DisplayFor(modelItem => item.Condition) product for 
+                            @Html.DisplayFor(modelItem => item.Gender) 
+                            (@Html.DisplayFor(modelItem => item.Size) size) 
+                            shipping from @Html.DisplayFor(modelItem => item.Location)    
+                        </p>
+                        <div class="d-flex align-items-center flex-row">
+                            <img src="https://i.imgur.com/e9VnSng.png" width="20">
+                            <span class="text-success font-weight-bold">2 Years Guarantee</span>
+                        </div>
+                    </div>
+                    <hr />
+                    <div class="card-body">
+                        <div class="text-right">
+                            <button class="btn btn-outline-dark">Add to wishlist</button> 
+                            <button class="btn btn-dark">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
