--- a/OnlineClothesStore/Views/Shared/_Layout.cshtml
+++ b/OnlineClothesStore/Views/Shared/_Layout.cshtml
@@ -75,8 +75,8 @@
                 </ul>
                 @*Search bar*@
                 <form class="d-flex">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    <input class="form-control mr-sm-2" type="text" placeholder="Enter Keyword">
+                    <button class="btn btn-danger wrn-btn my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
         </div>
